  mode left the mouse restricted to the window.
- BASIC: SAVE no longer affected by LISTO.
- BASIC: Allow lowercase keywords if '-lck' command line option is used or
  'lowercase' config file option is present, or at runtime via the SYS
  "Brandy_AllowLowercase" call.
- BASIC: Fix behaviour of WIDTH and TAB(x,y), and behaviour of TAB(x) with
  an embedded CR in the string.

* 1.23.3 - 06 August 2024
- General: Implemented code tidy-ups recommended by OpenBSD. Thank you to Jag
  Talon for this!
- Build: Added build option -DBRANDY_NOVERCHECK to disable new version
  checking on startup.
- BASIC: Implemented EXIT FOR, EXIT REPEAT and EXIT WHILE, based on the
  extensions in Richard Russell's BB4W, BBCSDL, BBCTTY and BBCZ80v5.
- BASIC: Implement == to be synonymous with = in comparisons. Another
  compatility follow from Richard Russell's BASICs.
- BASIC: Allow DIM var LOCAL -1 outside of FN/PROC (as per BB4W, BBCSDL,
  BBCTTY and BBCZ80v5).
- BASIC: Implement BBCSDL's PLOT BY x,y (equivalent to PLOT 65,x,y), and
  equivalent to POINT BY x,y in ARM BASIC V.
- BASIC: WIDTH is now operational for GUI mode and the 'tbrandy' text-mode
  builds. Note that unlike RISC OS it affects almost ALL output (VDU excluded),
  including from built-in *-commands (but not external commands).

* 1.23.2 - 22 May 2024
- General: Much code clean-up (and some bugs fixed) after static analysis.
- Build: Autodetect whether it's a release build (master branch, or a tarball
  without any git information) or a development build (anything else).
- System: Added a new version check. Use option "-nocheck" to skip this
  should it cause slow starts.
- System: Added support for a configuration file, in $HOME/.brandyrc,
  %APPDATA%\brandyrc or <Brandy$Dir>.brandyrc depending on platform.
  See docs/Config.txt for full details.
- System: Tune stack and recursion depth to allow for a flood fill of crosshatch
  in a 640x512 screen mode as the minimum stack size.